@@ -139,6 +139,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   - tmpMsg is drawn from GameEngine::drawOverlays()
   - logo, version and stats are drawn in MainMenu::drawOverlay()
 **** TODO Start to handle Local test
+     CLOCK: [2017-03-29 mer. 22:15]--[2017-03-29 mer. 22:43] =>  0:28
      CLOCK: [2017-03-29 mer. 19:35]--[2017-03-29 mer. 20:43] =>  1:08
      CLOCK: [2017-03-27 lun. 22:47]--[2017-03-27 lun. 23:21] =>  0:34
      CLOCK: [2017-03-27 lun. 22:00]--[2017-03-27 lun. 22:11] =>  0:11
@@ -182,6 +183,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
     - [X] Layout must have a New World configuration window
       - [X] World generation with Seed textedit and random button 
 	Must add the random button to seed
+    - [ ] Should inject passed time to CEGUI	
     - [ ] Should send keyboard input to CEGUI
       This bug occurs in all game states
       - [ ] Should send these events to gamestate before
